# Didi_Challenge_2017_ROS

./: README.md  omake
dl_script/: Full_view_detection.ipynb  cluster_classify_model.py  cluster_classify_prediction.ipynb  cluster_classify_prediction.py  cluster_classify_train.py  cluster_classify_util.py  clustering_and_detect_bad_label.ipynb  convert_to_full_view_panorama.py  full_view_car_detect.md  full_view_model.py  full_view_train.py  model_README.md  train.py  train_2.py  util_func.py
object_tracker/: CMakeLists.txt  package.xml  setup.py
object_tracker/include/object_tracker/: cluster.h  define.h  filter.h  tracker.h  vector3.h
object_tracker/scripts/: convert_to_full_view_panorama.py  detector.py  dl_filter.py  dl_tracker.py  full_view_model.py  full_view_train.py  tracklet.py  tracklet_writer.py  util_func.py
object_tracker/src/: bag_player.cpp  cluster.cpp  cluster_tracker.cpp  detector.py  filter.cpp  object_tracker.cpp  point_filter.cpp  preprocessor.cpp  tracker.cpp  tracklet.py  util_func.py  vector3.cpp
one_frame_data/: lidar_270.npy
ref_script/: detector.py  model.py  tracklet.py  util_func.py
ros_script/: bag_player  bag_player.launch  bag_publisher  bag_publisher.launch  cluster_tracker.launch  dl_tracker.launch  filter  filter.launch  object_tracker  object_tracker.launch  object_tracker~  play_all  run_object_tracker.sh
tracklet/: ford01.xml  ford02.xml  ford03.xml  ford04.xml  ford05.xml  ford06.xml  ford07.xml  mustang01.xml
